# partydiscord-rust

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  kube-deployment.yml
src/: main.rs
